# dota2-coach

./: .gitignore  Cargo.toml  docs.md  docs.rs  gamestate_integration_coach.cfg  inspo.md  readme.md
src/: app.rs  event.rs  main.rs  server.rs  state.rs  ui.rs
