# Cargo.toml
[package]
name = "dota2-coach"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
chrono = "0.4"
md5 = "0.7.0"

[[bin]]
name = "coach"
path = "src/bin/coach.rs"
