# Cargo.toml
[package]
name = "dota2-coach"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
chrono = "0.4"
md5 = "0.7.0"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
color-eyre = "0.6.3"

[[bin]]
name = "coach"
path = "src/main.rs"